src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  :root {
    --background: 0 0% 100%;
    --foreground: 0 0% 15%;
    --card: 0 0% 100%;
    --card-foreground: 0 0% 15%;
    --popover: 0 0% 98%;
    --popover-foreground: 0 0% 15%;
    --primary: 142 83% 36%;
    --primary-foreground: 0 0% 100%;
    --secondary: 0 0% 85%;
    --secondary-foreground: 0 0% 23%;
    --muted: 0 0% 95%;
    --muted-foreground: 0 0% 40%;
    --accent: 0 0% 94%;
    --accent-foreground: 0 0% 20%;
    --destructive: 0 100% 45%; /* Red for destructive */
    --destructive-foreground: 0 0% 100%;
    --border: 0 0% 90%;
    --input: 0 0% 94%;
    --ring: 142 83% 36%;
    --radius: 0.5rem;
  }

  .dark {
    --background: 0 0% 5%; /* Even darker background */
    --foreground: 0 0% 85%;
    --card: 0 0% 7%; /* Even darker card background */
    --card-foreground: 0 0% 75%;
    --popover: 0 0% 8%; /* Even darker popover background */
    --popover-foreground: 0 0% 75%;
    --primary: 142 70.6% 36%; /* Keeping your primary color for dark mode */
    --primary-foreground: 0 0% 100%;
    --secondary: 0 0% 30%; /* Even darker secondary background */
    --secondary-foreground: 0 0% 80%;
    --muted: 0 0% 15%; /* Even darker muted background */
    --muted-foreground: 0 0% 60%;
    --accent: 0 0% 20%; /* Even darker accent background */
    --accent-foreground: 0 0% 70%;
    --destructive: 0 100% 40%; /* Even darker red for destructive in dark mode */
    --destructive-foreground: 0 0% 95%;
    --border: 0 0% 20%; /* Even darker border */
    --input: 0 0% 15%; /* Even darker input background */
    --ring: 142 70.6% 40%;
  }
}

@layer base {
  * {
    @apply border-border;
  }
  body {
    @apply bg-background text-foreground;
  }

  * {
    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
    scroll-margin: 2rem;
  }

  /* ----------- Scrollbar ----------- */
  /* width */
  ::-webkit-scrollbar {
    width: 10px;
    height: 10px;
    background-color: transparent;
  }
  /* Track */
  ::-webkit-scrollbar-track {
    background: transparent;
  }
  /* Handle */
  ::-webkit-scrollbar-thumb {
    border-radius: 10px;
    /* background: theme("colors.neutral.300"); */
    background: hsl(0 0% 80%);
  }
  /* Handle on hover */
  ::-webkit-scrollbar-thumb:hover {
    /* background: theme("colors.neutral.400"); */
    background: hsl(0 0% 60%);
  }

  /* ----------- Highlight content ----------- */
  ::selection {
    background: hsl(142 76% 91%);
  }
  html.dark ::selection {
    background: hsl(142 76% 14%);
  }
}

@media (max-width: 640px) {
  .container {
    @apply px-4;
  }
}

